--- a/site/html/journal.html
+++ b/site/html/journal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Журнал | Название проекта</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
         <style>
             /* Стили для изображений в журнале */
             .journal-image {
