--- a/site/html/resourses.html
+++ b/site/html/resourses.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ресурсы | Сервисы для ППО</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Ресурсы | Сервисы ППО</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
